src/testsuite/single/tests/compiler/fail/bad_foreach.c
void foo() {
    foreach (x in ({})) ;
}
